--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ name: 'mzQC'
 description: 'mzQC website'
 logo: 'assets/images/mzQC.png'
 favicon: 'assets/images/favicon.ico'
-baseurl: '/mundana-theme-jekyll'
+baseurl: '/mzQC'
 disqus: 'mzQC format'
 email: 'psidev-qc-dev@lists.sourceforge.net'
 mailchimp-list: 'https://wowthemes.us11.list-manage.com/subscribe/post?u=8aeb20a530e124561927d3bd8&amp;id=8c3d2d214b'
