--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,27 @@
 # Site
 name: 'mzQC'
-description: 'mzQC website'
+title: 'mzQC website'
 minima:
   skin: dark
 #remote_theme: jekyll/minima
 header_pages:
-  - _pages/about.md
-  - _pages/validator.html
+  - about.md
+  - validator.html
 
 author:
   name: HUPO-PSI QC working group
   email: "psidev-qc-dev@lists.sourceforge.net"
 
-# Exclude metadata and development time dependencies (like Grunt plugins)
+# Exclude metadata and development stuff
 exclude: [README.markdown, package.json, grunt.js, Gruntfile.js, Gruntfile.coffee, node_modules]
+show_excerpts: true
+minima:
+  social_links:
+    github:  jekyll
+
+# Build settings
+theme: minima
+
+#plugins:
+# - jekyll-feed
+# - jekyll-seo-tag
